syntax = "proto3";

package processor.person.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "validate/validate.proto";

// An event with metadata containing information about a project that was created
message PersonCreated {
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.person.v1/Person"},
    (validate.rules).string = {pattern: "^person-[A-Za-z0-9]{15}$"}
  ];
  string group_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.group.v1/Group"},
    (validate.rules).string = {pattern: "^group-[A-Za-z0-9]{15}$"}
  ];
  string name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      min_len: 1;
      max_len: 100;
    }
  ];
  string requestor_email = 4 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string.email = true
  ];
}

// An event with metadata containing information about a project that was deleted
message PersonDeleted {
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.person.v1/Person"},
    (validate.rules).string = {pattern: "^person-[A-Za-z0-9]{15}$"}
  ];
  string group_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.group.v1/Group"},
    (validate.rules).string = {pattern: "^group-[A-Za-z0-9]{15}$"}
  ];
}

// An event with metadata containing information about a project that was updated
message PersonUpdated {
  string id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.person.v1/Person"},
    (validate.rules).string = {pattern: "^person-[A-Za-z0-9]{15}$"}
  ];
  string group_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.group.v1/Group"},
    (validate.rules).string = {pattern: "^group-[A-Za-z0-9]{15}$"}
  ];
}
